--- a/CMPG223 Project/frmVehicles.resx
+++ b/CMPG223 Project/frmVehicles.resx
@@ -26856,4 +26856,7 @@
         3Bf57m/+h/8fV9tmFDp8tfQAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
